Added two more elf battles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <script src="canvas-handler.js"></script>
     <script src="renderers.js"></script>
+    <script src="battle-sequencer.js"></script>
     <script src="elves.js"></script>
     <script src="script.js"></script>
 </body>
