--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>You Versus 27 Elves</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <meta name="theme-color" content="#000000"/>
 </head>
 <body>
     <div id="square">
