--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <canvas id="canvas" width="750" height="650"></canvas>
     </div>
     <script src="canvas-handler.js"></script>
+    <script src="scary-audio-manager.js"></script>
     <script src="renderers.js"></script>
     <script src="battle-sequencer.js"></script>
     <script src="elves.js"></script>
