--- a/index.html
+++ b/index.html
@@ -15,9 +15,48 @@
     </div>
     <script src="canvas-handler.js"></script>
     <script src="scary-audio-manager.js"></script>
-    <script src="renderers.js"></script>
+    
+    <script src="renderers/components/helpers.js"></script>
+    <script src="renderers/components/fader.js"></script>
+    <script src="renderers/components/backgroud.js"></script>
+    <script src="renderers/components/boss-background.js"></script>
+
+    <script src="renderers/elf-screen.js"></script>
+    <script src="renderers/elf-select-screen.js"></script>
+    <script src="renderers/end-screen.js"></script>
+    <script src="renderers/introduction.js"></script>
+
+    <script src="elves/base.js"></script>
+    <script src="elves/1.js"></script>
+    <script src="elves/2.js"></script>
+    <script src="elves/3.js"></script>
+    <script src="elves/4.js"></script>
+    <script src="elves/5.js"></script>
+    <script src="elves/6.js"></script>
+    <script src="elves/7.js"></script>
+    <script src="elves/8.js"></script>
+    <script src="elves/9.js"></script>
+    <script src="elves/10.js"></script>
+    <script src="elves/11.js"></script>
+    <script src="elves/12.js"></script>
+    <script src="elves/13.js"></script>
+    <script src="elves/14.js"></script>
+    <script src="elves/15.js"></script>
+    <script src="elves/16.js"></script>
+    <script src="elves/17.js"></script>
+    <script src="elves/18.js"></script>
+    <script src="elves/19.js"></script>
+    <script src="elves/20.js"></script>
+    <script src="elves/21.js"></script>
+    <script src="elves/22.js"></script>
+    <script src="elves/23.js"></script>
+    <script src="elves/24.js"></script>
+    <script src="elves/25.js"></script>
+    <script src="elves/26.js"></script>
+    <script src="elves/27.js"></script>
+
     <script src="battle-sequencer.js"></script>
-    <script src="elves.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
