--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="square">
         <canvas id="canvas" width="750" height="650"></canvas>
     </div>
-    <script src="canvas-handler.js"></script>
+    <script src="canvas-manager.js"></script>
     <script src="scary-audio-manager.js"></script>
     
     <script src="renderers/components/helpers.js"></script>
