Added canvas sizing modes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
-    <div id="square">
-        <canvas id="canvas" width="750" height="650"></canvas>
-    </div>
+    <canvas id="canvas" width="750" height="650"></canvas>
+    <p id="picture-mode-element"></p>
+
     <script src="canvas-manager.js"></script>
     <script src="scary-audio-manager.js"></script>
     
