Added 1000% cooler loading screen

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <script src="elves/26.js"></script>
     <script src="elves/27.js"></script>
 
+    <script src="renderers/sidescroll.js"></script>
+
     <script src="battle-sequencer.js"></script>
 
     <script src="script.js"></script>
