Added a polar inversion fader hijack hack that runs so so so horribly

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
     <script src="renderers/sidescroll.js"></script>
 
+    <script src="renderers/polar-inversion-test.js"></script>
+
     <script src="battle-sequencer.js"></script>
 
     <script src="script.js"></script>
