Added a special friend

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="renderers/components/fader.js"></script>
     <script src="renderers/components/background.js"></script>
     <script src="renderers/components/boss-background.js"></script>
+    <script src="renderers/components/animators.js"></script>
+    <script src="renderers/sidescroll.js"></script>
 
     <script src="renderers/elf-screen.js"></script>
     <script src="renderers/elf-select-screen.js"></script>
@@ -55,7 +57,6 @@
     <script src="elves/26.js"></script>
     <script src="elves/27.js"></script>
 
-    <script src="renderers/sidescroll.js"></script>
     <script src="battle-sequencer.js"></script>
     <script src="script.js"></script>
 </body>
