Engine isolations and redirections

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="scary-audio-manager.js"></script>
 
+    <script src="renderers/bonus-screen.js"></script>
     <script src="renderers/components/helpers.js"></script>
     <script src="renderers/components/fader.js"></script>
     <script src="renderers/components/background.js"></script>
