--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Begin load engine -->
     <script src="elven-engine/canvas-manager.js"></script>
+    <script src="elven-engine/controller-helper.js"></script>
     <script src="elven-engine/audio-manager.js"></script>
     <script src="elven-engine/file-managers.js"></script>
     <script src="elven-engine/constants.js"></script>
@@ -90,7 +91,6 @@
     <script>
     (function(){
         const endKeys = Object.keys(this);
-        console.log("New keys count",endKeys.length - startKeys.length);
         console.log("New keys",endKeys.filter(endKey => {
             if(!startKeys[endKey]) {
                 return true;
