--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="elven-custom/renderers/components/background.js"></script>
     <script src="elven-custom/renderers/components/boss-background.js"></script>
     <script src="elven-custom/renderers/components/elf-animations.js"></script>
+    <script src="elven-custom/renderers/components/fire-effect.js"></script>
     <script src="elven-custom/renderers/sidescroll.js"></script>
     <script src="elven-custom/renderers/elf-screen.js"></script>
     <script src="elven-custom/renderers/elf-select-screen.js"></script>
