Added tiny arm menu effect

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="elven-custom/renderers/components/elf-animations.js"></script>
     <script src="elven-custom/renderers/components/fire-effect.js"></script>
     <script src="elven-custom/renderers/components/crazy-flying-shit.js"></script>
+    <script src="elven-custom/renderers/components/particle-field.js"></script>
     <script src="elven-custom/renderers/sidescroll.js"></script>
     <script src="elven-custom/renderers/elf-screen.js"></script>
     <script src="elven-custom/renderers/elf-select-screen.js"></script>
