--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <script src="elven-custom/renderers/components/fire-effect.js"></script>
     <script src="elven-custom/renderers/components/crazy-flying-shit.js"></script>
     <script src="elven-custom/renderers/components/particle-field.js"></script>
+    <script src="elven-custom/renderers/components/particle-whammer.js"></script>
+
     <script src="elven-custom/renderers/sidescroll.js"></script>
     <script src="elven-custom/renderers/elf-screen.js"></script>
     <script src="elven-custom/renderers/elf-select-screen.js"></script>
