Added alt particle effect

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="elven-custom/renderers/components/crazy-flying-shit.js"></script>
     <script src="elven-custom/renderers/components/particle-field.js"></script>
     <script src="elven-custom/renderers/components/particle-whammer.js"></script>
+    <script src="elven-custom/renderers/components/figure-eight.js"></script>
 
     <script src="elven-custom/renderers/sidescroll.js"></script>
     <script src="elven-custom/renderers/elf-screen.js"></script>
