Parallax background, collision improvements

--- a/one-index.html
+++ b/one-index.html
@@ -37,6 +37,7 @@
     <!-- Begin custom runtime renderers -->
     <script src="elven-one/renderers/overworld-base.js"></script>
     <script src="elven-one/renderers/components/player-animator.js"></script>
+    <script src="elven-one/renderers/components/parallax-background.js"></script>
     <!-- End custom runtime renderers -->
 
 
