--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
+    <canvas id="background-canvas" width="1" height="1"></canvas>
     <canvas id="canvas" width="750" height="650"></canvas>
     <p id="picture-mode-element"></p>
 
