--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
+    <script>const ENV_FLAGS={}</script>
+    <script src="elven-custom/constants.js"></script>
+    <script src="release-flags.js"></script>
     <canvas id="background-canvas" width="1" height="1"></canvas>
-    <canvas id="canvas" width="750" height="650"></canvas>
+    <canvas id="canvas"></canvas>
     <p id="picture-mode-element"></p>
-
     <script src="steam-helper.js"></script>
-
-    <!-- Begin load engine -->
-    <script src="elven-engine/canvas-manager.js"></script>
     <script src="elven-engine/constants.js"></script>
+    <script src="elven-engine/canvas-manager.js"></script>
     <script src="elven-engine/controller-helper.js"></script>
     <script src="elven-engine/audio-manager.js"></script>
     <script src="elven-engine/file-managers.js"></script>
     <script src="elven-engine/files.js"></script>
+    <script src="elven-engine/font-dictionary.js"></script>
     <script src="elven-engine/renderers/components/fader.js"></script>
     <script src="elven-engine/renderers/components/custom-text.js"></script>
-    <!-- End load engine -->
+    <script src="elven-engine/renderers/components/generic.js"></script>
 
-
+   
     <!-- Begin expected runtime engine -->
     <script src="elven-custom/files.js"></script>
-    <script src="elven-custom/constants.js"></script>
     <!-- End expected runtime engine -->
 
 
@@ -50,12 +50,8 @@
     <script src="elven-custom/renderers/introduction.js"></script>
     <script src="elven-custom/renderers/bonus-screen.js"></script>
     <script src="elven-custom/renderers/components/fader-static-effect.js"></script>
-    <!-- End custom runtime renderers -->
 
-
-    <!-- Begin custom runtime components -->
     <script src="elven-custom/runtime/elves/base.js"></script>
-
     <script src="elven-custom/runtime/elves/1.js"></script>
     <script src="elven-custom/runtime/elves/2.js"></script>
     <script src="elven-custom/runtime/elves/3.js"></script>
@@ -83,14 +79,8 @@
     <script src="elven-custom/runtime/elves/25.js"></script>
     <script src="elven-custom/runtime/elves/26.js"></script>
     <script src="elven-custom/runtime/elves/27.js"></script>
-
     <script src="elven-custom/runtime/battle-sequencer.js"></script>
     <script src="elven-custom/runtime/debug.js"></script>
-    <!-- End custom runtime components -->
-
-
-    <!-- Begin expected runtime initializer -->
     <script src="elven-custom/script.js"></script>
-    <!-- End expected custom engine -->
 </body>
 </html>
