--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
-    <script>const ENV_FLAGS={}</script>
+    <script>const ENV_FLAGS={};</script>
     <script src="elven-custom/constants.js"></script>
     <script src="release-flags.js"></script>
     <canvas id="background-canvas" width="1" height="1"></canvas>
