--- a/index.html
+++ b/index.html
@@ -4,34 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../elven-engine/style.css">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
     <script>const ENV_FLAGS={};</script>
     <script src="elven-custom/constants.js"></script>
-    <script src="release-flags.js"></script>
     <canvas id="background-canvas" width="1" height="1"></canvas>
     <canvas id="canvas"></canvas>
     <p id="picture-mode-element"></p>
-    <script src="steam-helper.js"></script>
-    <script src="elven-engine/constants.js"></script>
-    <script src="elven-engine/canvas-manager.js"></script>
-    <script src="elven-engine/controller-helper.js"></script>
-    <script src="elven-engine/audio-manager.js"></script>
-    <script src="elven-engine/file-managers.js"></script>
-    <script src="elven-engine/files.js"></script>
-    <script src="elven-engine/font-dictionary.js"></script>
-    <script src="elven-engine/renderers/components/fader.js"></script>
-    <script src="elven-engine/renderers/components/custom-text.js"></script>
-    <script src="elven-engine/renderers/components/generic.js"></script>
+    <script src="../elven-engine/steam-helper.js"></script>
+    <script src="../elven-engine/constants.js"></script>
+    <script src="../elven-engine/canvas-manager.js"></script>
+    <script src="../elven-engine/controller-helper.js"></script>
+    <script src="../elven-engine/audio-manager.js"></script>
+    <script src="../elven-engine/file-managers.js"></script>
+    <script src="../elven-engine/files.js"></script>
+    <script src="../elven-engine/font-dictionary.js"></script>
+    <script src="../elven-engine/renderers/components/fader.js"></script>
+    <script src="../elven-engine/renderers/components/custom-text.js"></script>
+    <script src="../elven-engine/renderers/components/generic.js"></script>
 
    
     <!-- Begin expected runtime engine -->
     <script src="elven-custom/files.js"></script>
     <!-- End expected runtime engine -->
-
 
     <!-- Begin custom runtime renderers -->
     <script src="elven-custom/renderers/components/background.js"></script>
