Add default size mode to env flags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="theme-color" content="#000000"/>
 </head>
 <body>
-    <script>const ENV_FLAGS={};</script>
+    <script>const ENV_FLAGS={
+    DEFAULT_SIZE_MODE: "fit"
+    };</script>
     <script src="elven-custom/constants.js"></script>
     <canvas id="background-canvas" width="1" height="1"></canvas>
     <canvas id="canvas"></canvas>
