remove steam helper

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     DO_STEAM_SETUP: false,
     NO_CONTEXT_MENU: true,
     STATIC_BACKGROUND: true,
-    ENABLE_DEV_F12: false,
+    ENABLE_F_BUTTONS: false,
     DEFAULT_SIZE_MODE: "fit"
     };</script>
     <script src="../elven-engine/constants.js"></script>
