No frame buffer flag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     NO_CONTEXT_MENU: true,
     STATIC_BACKGROUND: true,
     ENABLE_F_BUTTONS: false,
-    DEFAULT_SIZE_MODE: "fit"
+    DEFAULT_SIZE_MODE: "fit",
+    NO_FRAME_BUFFER: true
     };</script>
     <script src="../elven-engine/constants.js"></script>
     <script src="elven-custom/constants.js"></script>
